--- a/GestorTareasApp/res/layout/activity_alarm.xml
+++ b/GestorTareasApp/res/layout/activity_alarm.xml
@@ -9,16 +9,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.gestortareasapp.AlarmActivity" >
 
-    <Button
-        android:id="@+id/alarm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="28dp"
-        android:text="Stop"
-        android:textStyle="bold" />
-
     <TextView
         android:id="@+id/textViewDescripcionEficiencia"
         android:layout_width="wrap_content"
@@ -27,7 +17,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:text="Realizar Tarea"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textStyle="bold" />
 
     <AnalogClock
         android:id="@+id/analogClock1"
@@ -54,7 +45,8 @@
         android:layout_alignBottom="@+id/txtDescripcionTarea"
         android:layout_marginBottom="21dp"
         android:layout_toLeftOf="@+id/analogClock1"
-        android:text="Tarea:" />
+        android:text="Tarea:"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txtHoraTarea"
@@ -72,6 +64,17 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/txtHoraTarea"
         android:layout_alignRight="@+id/textViewEficienciaPorc"
-        android:text="Fecha:" />
+        android:text="Fecha:"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/alarm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="16dp"
+        android:text="Detener Alarma"
+        android:textStyle="bold" />
 
 </RelativeLayout>
