Pruebas finales Beta2

--- a/GestorTareasApp/res/layout/activity_buscar_eficiencia.xml
+++ b/GestorTareasApp/res/layout/activity_buscar_eficiencia.xml
@@ -3,7 +3,7 @@
     android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/f3"
+    android:background="@drawable/fondo_22"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,43 +11,71 @@
     tools:context="com.example.gestortareasapp.BuscarEficiencia" >
 
     <LinearLayout
-        android:id="@+id/linearLayout1"
+        android:id="@+id/linearLayout3"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/textViewDescripTareaAtrasada"
+            android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Descripcion"
-            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="      N.E     NO EFICIENTE"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="         E       EFICIENTE"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="20dp"
+            android:text="      M.E    MUY EFICIENTE"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/listViewEficiencia"
+        android:layout_alignRight="@+id/listViewEficiencia" >
+
+        <EditText
+            android:id="@+id/editTxtDescripcionEficienciaJefe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" >
+
+            <requestFocus />
+        </EditText>
+
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.32"
+            android:onClick="onBuscar"
+            android:text="Buscar"
             android:textStyle="bold" />
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/linearLayout1"
-        android:orientation="vertical" >
+    <ListView
+        android:id="@+id/listViewEficiencia"
+        android:layout_width="286dp"
+        android:layout_height="282dp"
+        android:layout_above="@+id/linearLayout3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/linearLayout1" >
 
-        <ListView
-            android:id="@+id/listViewEficiencia"
-            android:layout_width="286dp"
-            android:layout_height="428dp" >
-        </ListView>
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/textViewTareasNoCumplidas"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/linearLayout2"
-        android:layout_alignTop="@+id/linearLayout1"
-        android:layout_marginRight="49dp"
-        android:text="Nivel"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="bold" />
+    </ListView>
 
 </RelativeLayout>
