--- a/GestorTareasApp/res/layout/activity_register.xml
+++ b/GestorTareasApp/res/layout/activity_register.xml
@@ -3,7 +3,7 @@
     android:id="@+id/ScrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/f3"
+    android:background="@drawable/fondo_22"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -11,8 +11,8 @@
     tools:context="com.example.gestortareasapp.RegisterActivity" >
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="408dp"
+        android:layout_width="wrap_content"
+        android:layout_height="636dp"
         android:orientation="vertical" >
 
         <LinearLayout
@@ -26,7 +26,6 @@
                 android:text="            Registar Usuario"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:textStyle="bold" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -40,7 +39,6 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Nombre" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -54,7 +52,6 @@
                 android:layout_weight="0.08"
                 android:ems="10"
                 android:hint="Apellido" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -83,7 +80,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/ic_erroneo" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -97,7 +93,6 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="Direccion" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -111,7 +106,6 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="email" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -141,6 +135,12 @@
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="                          mínimo 4 caracteres" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
@@ -152,7 +152,10 @@
                 android:layout_weight="1"
                 android:ems="10"
                 android:hint="contraseña"
-                android:inputType="textPassword" />
+                android:inputType="textPassword" >
+
+                <requestFocus />
+            </EditText>
 
         </LinearLayout>
 
@@ -181,7 +184,6 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:src="@drawable/ic_erroneo" />
-
         </LinearLayout>
 
         <Spinner
@@ -195,8 +197,9 @@
 
         <TextView
             android:id="@+id/textViewDescripcionEficiencia"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.09"
             android:text="                             Departamento" />
 
         <LinearLayout
@@ -210,15 +213,17 @@
                 android:layout_height="80px"
                 android:onClick="OnRegistar"
                 android:text="Registrar Usuario"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/buttonRealizarTareas"
                 android:layout_width="440px"
                 android:layout_height="80px"
                 android:onClick="OnCancelar"
-                android:text="CANCELAR"
-                android:textAlignment="center" />
+                android:text="Cancelar"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
         </LinearLayout>
     </LinearLayout>
