--- a/GestorTareasApp/res/layout/activity_buscar_tarea_empleado_realizada.xml
+++ b/GestorTareasApp/res/layout/activity_buscar_tarea_empleado_realizada.xml
@@ -3,7 +3,7 @@
     android:id="@+id/ScrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/f3"
+    android:background="@drawable/fondo_22"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -34,7 +34,8 @@
                 android:layout_width="104dp"
                 android:layout_height="wrap_content"
                 android:onClick="OnBuscar"
-                android:text="Buscar" />
+                android:text="Buscar"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
