--- a/GestorTareasApp/res/layout/activity_editar_tarea_realizada.xml
+++ b/GestorTareasApp/res/layout/activity_editar_tarea_realizada.xml
@@ -3,7 +3,7 @@
     android:id="@+id/ScrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/f3"
+    android:background="@drawable/fondo_22"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -24,7 +24,8 @@
             android:layout_below="@+id/textView1"
             android:layout_marginTop="67dp"
             android:onClick="onGuardar"
-            android:text="    Guardar     " />
+            android:text="    Guardar     "
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/button2"
@@ -34,7 +35,8 @@
             android:layout_alignBottom="@+id/button1"
             android:layout_toRightOf="@+id/button1"
             android:onClick="onCancelar"
-            android:text="    Cancelar     " />
+            android:text="    Cancelar     "
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textViewDescripcTareaEditar"
@@ -96,7 +98,8 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textView4"
             android:onClick="onArchivo"
-            android:text="Visualizar Archivo de la Tarea" />
+            android:text="Visualizar Archivo de la Tarea"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/textView1"
