--- a/GestorTareasApp/res/layout/activity_eficiencia_gempleado.xml
+++ b/GestorTareasApp/res/layout/activity_eficiencia_gempleado.xml
@@ -2,7 +2,7 @@
   xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/f3"
+    android:background="@drawable/fondo_22"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -109,7 +109,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="14dp"
         android:onClick="onCerrar"
-        android:text="Cerrar" />
+        android:text="Cerrar"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textViewDescripTareaAtrasada"
