--- a/GestorTareasApp/res/layout/activity_menu_eficiencia_empleado.xml
+++ b/GestorTareasApp/res/layout/activity_menu_eficiencia_empleado.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-     android:background="@drawable/f3"
+     android:background="@drawable/fondo_22"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -30,7 +30,8 @@
         android:layout_marginBottom="46dp"
         android:layout_marginRight="26dp"
         android:onClick="onCerrar"
-        android:text="CERRAR" />
+        android:text="CERRAR"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/button2"
@@ -40,7 +41,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="62dp"
         android:onClick="onTareas"
-        android:text="POR TAREAS" />
+        android:text="Por Tareas"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/buttonTareaPendiente"
@@ -50,7 +52,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="17dp"
         android:onClick="onGeneral"
-        android:text="GENERAL" />
+        android:text="General"
+        android:textStyle="bold" />
 
 </RelativeLayout>
 
