--- a/GestorTareasApp/res/layout/activity_tarea_realizada.xml
+++ b/GestorTareasApp/res/layout/activity_tarea_realizada.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-        android:background="@drawable/f3"
+        android:background="@drawable/fondo_22"
   
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -82,14 +82,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onGuardar"
-            android:text="GUARDAR" />
+            android:text="Guardar"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/buttonTRCancelar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onCancelar"
-            android:text="CANCELAR" />
+            android:text="Cancelar"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
