--- a/GestorTareasApp/res/layout/activity_tareas.xml
+++ b/GestorTareasApp/res/layout/activity_tareas.xml
@@ -3,7 +3,7 @@
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-     android:background="@drawable/f3"
+     android:background="@drawable/fondo_22"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -41,7 +41,8 @@
             android:layout_alignLeft="@+id/buttonFecha"
             android:layout_below="@+id/buttonFecha"
             android:onClick="onBuscarTarea"
-            android:text="Buscar" />
+            android:text="Buscar"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btn_notificacion"
@@ -50,7 +51,8 @@
             android:layout_alignLeft="@+id/buttonTRCancelar"
             android:layout_below="@+id/buttonTRCancelar"
             android:onClick="onEditarTarea"
-            android:text="Editar" />
+            android:text="Editar"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/button4"
@@ -59,7 +61,8 @@
             android:layout_alignLeft="@+id/btn_notificacion"
             android:layout_below="@+id/btn_notificacion"
             android:onClick="onEliminarTarea"
-            android:text="Eliminar" />
+            android:text="Eliminar"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/buttonBuscarTarea"
@@ -69,7 +72,8 @@
             android:layout_below="@+id/button4"
             android:layout_marginTop="30dp"
             android:onClick="onSalir"
-            android:text="Salir" />
+            android:text="Salir"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/buttonFecha"
@@ -78,7 +82,8 @@
             android:layout_alignParentLeft="true"
             android:layout_below="@+id/textViewValidarCedula"
             android:onClick="onCrearTarea"
-            android:text="Crear" />
+            android:text="Crear"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
